--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>自己紹介だよ</title>
+    <title>小柳 佳那子のポートフォリオ</title>
     <meta
       name="description"
       content="自転車ラブです。よろしくおねがいします。"
@@ -285,91 +285,108 @@
           </ul>
           <div>
             <h3 class="section__thinking--h3">figmaでのデザインとコード対応</h3>
-            <h4>Case1 Button</h4>
-            <ul class="section__thinking--case-list">
-              <li>
-                <h5>Figmaでのデザイン</h5>
-                <div class="section__thinking-images">
-                  <img
-                    src="./img/button_figma_variant_design.png"
-                    alt="Figma画面の左にあるサイドパネルとデザイン作業パネルで作成したボタンコンポーネントの状態一覧をスクリーンショットした画像。上からVariants名 Button、inactive-disabled、inactive-hover、active-disabled、active-hover、active-focused、active、inactive-focused、inactiveのレイヤー名が並んでいる。縦に Normal と Active、横に Default・Hover・Focus・Disabled が並び、青い「押さないでね」ボタンと赤い「押しちゃったんですか？」ボタンが、それぞれ通常・ホバー・フォーカス・無効の色や枠線の違いで表示されている。"
-                    width="400"
-                    height="300"
-                    class="section__thinking-images-item"
-                  />
-                </div>
-              </li>
-              <li>
-                <h5>html/CSS/JS例</h5>
-                <p
-                  class="codepen"
-                  data-height="300"
-                  data-default-tab="html,result"
-                  data-slug-hash="EaPJOvR"
-                  data-pen-title="Untitled"
-                  data-user="kanakoshin"
-                  style="
-                    height: 300px;
-                    box-sizing: border-box;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border: 2px solid;
-                    margin: 1em 0;
-                    padding: 1em;
-                  "
-                >
-                  <span
-                    >See the Pen
-                    <a href="https://codepen.io/kanakoshin/pen/EaPJOvR">
-                      Untitled</a
-                    >
-                    by KanakoShin (<a href="https://codepen.io/kanakoshin"
-                      >@kanakoshin</a
-                    >) on <a href="https://codepen.io">CodePen</a>.</span
+            <div>
+              <h4>Case1 Button</h4>
+              <p>命名の一貫性</p>
+              <p>
+                初歩的なことではありますが、状態による変化の管理やコンポート名の命名に一貫性を持たせることを気をつけています。
+              </p>
+              <ul class="section__thinking--case-list">
+                <li>
+                  <h5>Figmaでのデザイン</h5>
+                  <div class="section__thinking-images">
+                    <img
+                      src="./img/button_figma_variant_design.png"
+                      alt="Figma画面の左にあるサイドパネルとデザイン作業パネルで作成したボタンコンポーネントの状態一覧をスクリーンショットした画像。上からVariants名 Button、inactive-disabled、inactive-hover、active-disabled、active-hover、active-focused、active、inactive-focused、inactiveのレイヤー名が並んでいる。縦に Normal と Active、横に Default・Hover・Focus・Disabled が並び、青い「押さないでね」ボタンと赤い「押しちゃったんですか？」ボタンが、それぞれ通常・ホバー・フォーカス・無効の色や枠線の違いで表示されている。"
+                      width="400"
+                      height="300"
+                      class="section__thinking-images-item"
+                    />
+                  </div>
+                </li>
+                <li>
+                  <h5>html/CSS/JS例</h5>
+                  <p
+                    class="codepen"
+                    data-height="300"
+                    data-default-tab="html,result"
+                    data-slug-hash="EaPJOvR"
+                    data-pen-title="Untitled"
+                    data-user="kanakoshin"
+                    style="
+                      height: 300px;
+                      box-sizing: border-box;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      border: 2px solid;
+                      margin: 1em 0;
+                      padding: 1em;
+                    "
                   >
-                </p>
-                <script
-                  defer
-                  src="https://public.codepenassets.com/embed/index.js"
-                ></script>
-              </li>
-              <li>
-                <h5>React例</h5>
-                <p
-                  class="codepen"
-                  data-height="300"
-                  data-default-tab="html,result"
-                  data-slug-hash="PwZvJNe"
-                  data-pen-title="Button-React"
-                  data-user="kanakoshin"
-                  style="
-                    height: 300px;
-                    box-sizing: border-box;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border: 2px solid;
-                    margin: 1em 0;
-                    padding: 1em;
-                  "
-                >
-                  <span
-                    >See the Pen
-                    <a href="https://codepen.io/kanakoshin/pen/PwZvJNe">
-                      Button-React</a
+                    <span
+                      >See the Pen
+                      <a href="https://codepen.io/kanakoshin/pen/EaPJOvR">
+                        Untitled</a
+                      >
+                      by KanakoShin (<a href="https://codepen.io/kanakoshin"
+                        >@kanakoshin</a
+                      >) on <a href="https://codepen.io">CodePen</a>.</span
                     >
-                    by Kanako Koyanagi (<a href="https://codepen.io/kanakoshin"
-                      >@kanakoshin</a
-                    >) on <a href="https://codepen.io">CodePen</a>.</span
+                  </p>
+                  <script
+                    defer
+                    src="https://public.codepenassets.com/embed/index.js"
+                  ></script>
+                </li>
+                <li>
+                  <h5>React例</h5>
+                  <p>
+                    注：こちらのコードはあくまでデザインや、その命名をもとにAIで生成したReactのコードになります。本人はバリバリReact書けます！とかではないです。
+                  </p>
+                  <p
+                    class="codepen"
+                    data-height="300"
+                    data-default-tab="html,result"
+                    data-slug-hash="PwZvJNe"
+                    data-pen-title="Button-React"
+                    data-user="kanakoshin"
+                    style="
+                      height: 300px;
+                      box-sizing: border-box;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      border: 2px solid;
+                      margin: 1em 0;
+                      padding: 1em;
+                    "
                   >
-                </p>
-                <script
-                  defer
-                  src="https://public.codepenassets.com/embed/index.js"
-                ></script>
-              </li>
-            </ul>
+                    <span
+                      >See the Pen
+                      <a href="https://codepen.io/kanakoshin/pen/PwZvJNe">
+                        Button-React</a
+                      >
+                      by Kanako Koyanagi (<a
+                        href="https://codepen.io/kanakoshin"
+                        >@kanakoshin</a
+                      >) on <a href="https://codepen.io">CodePen</a>.</span
+                    >
+                  </p>
+                  <script
+                    defer
+                    src="https://public.codepenassets.com/embed/index.js"
+                  ></script>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <h4>Case2 Card</h4>
+            <p>構造の整合性</p>
+            <p>
+              初歩的なことではありますが、状態による変化の管理やコンポート名の命名に一貫性を持たせることを気をつけています。
+            </p>
           </div>
         </div>
       </section>
