--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
         <div class="site-header--logo">
           <a href="/" class="site-header--logo-bland">Kanako Koyanagi</a>
         </div>
-        <nav>
+        <!-- <nav>
           <ul class="menu">
             <li class="menu-list"><a href="#" class="menu-link">About</a></li>
             <li class="menu-list"><a href="#" class="menu-link">Bicycle</a></li>
             <li class="menu-list"><a href="#" class="menu-link">Bicycle</a></li>
             <li class="menu-list"><a href="#" class="menu-link">Bicycle</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
 
     <main id="main">
       <div class="hero full-bleed">
         <div class="hero-copy">
-          <h1>仕組みを整え、<br />最適な動線づくりを。</h1>
-          <!-- <p>UIデザインの知見をA11Yと接続します。</p> -->
+          <h1 class="hero-copy__letter">
+            仕組みを整え、<br />最適な動線づくりを。
+          </h1>
         </div>
         <img
           src="./img/IMG_9260.JPG"
@@ -59,14 +60,15 @@
               width="100"
               height="100"
             />
-            <div class="section-about--description">
-              <p class="section-about--name">Kanako Koyanagi</p>
-              <p>
-                10年ほど公立や私立の小中高で美術を教える。
-                その際に、特別支援教育、ICTと出会い、アクセシビリティと結びつく。
-                情報を「伝わる形」に整理するのが得意です。
-                得意領域：toB業務UI、htmlマークアップ、CSSスタイリング、読みやすい文章
-                価値観：読みやすさ・保守性・一貫性・ユーザの操作負荷を下げる設計
+            <div class="section-about__description">
+              <p class="section-about__description--name-jp">小柳 佳那子</p>
+              <p class="section-about__description--name-en">Kanako Koyanagi</p>
+              <p class="section-about__description--detail">
+                10年ほど公立や私立の小中高で美術を教える。<br />
+                その際に、特別支援教育、ICTと出会い、アクセシビリティと結びつく。<br />
+                情報を「伝わる形」に整理するのが好きです。<br />
+                得意領域：toB業務UI、htmlマークアップ、CSSスタイリング、読みやすい文章<br />
+                目標：読みやすさ・保守性・一貫性・ユーザの操作負荷を下げる設計<br />
               </p>
             </div>
           </div>
