--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>小柳 佳那子のポートフォリオ</title>
-    <meta
-      name="description"
-      content="自転車ラブです。よろしくおねがいします。"
-    />
+    <meta name="description" content="小柳 佳那子のポートフォリオです" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/ress@4.0.0/dist/ress.min.css"
@@ -43,7 +40,7 @@
         <img
           src="./img/IMG_9260.JPG"
           class="hero-mainvisual"
-          alt="自転車が写っている写真"
+          alt=""
           width="3"
           height="2"
         />
@@ -67,14 +64,83 @@
                 10年ほど公立や私立の小中高で美術を教える。<br />
                 その際に、特別支援教育、ICTと出会い、アクセシビリティと結びつく。<br />
                 情報を「伝わる形」に整理するのが好きです。<br />
-                得意領域：toB業務UI、htmlマークアップ、CSSスタイリング、読みやすい文章<br />
+                得意領域：toB業務UI、デザインシステム整備、htmlマークアップ、CSSスタイリング、文章<br />
                 目標：読みやすさ・保守性・一貫性・ユーザの操作負荷を下げる設計<br />
               </p>
             </div>
           </div>
         </div>
       </section>
-      <section id="work" class="section section-works section-backcolor">
+
+      <section class="section">
+        <h2 class="section-title full-bleed">今後やりたいこと</h2>
+        <ul class="section-wish">
+          <li class="section-wish--list">
+            <div class="section__thinking--h3">
+              <h3>htmlマークアップとCSSスタイリング</h3>
+              <p>
+                私は全工程の中で、htmlとCSSが一番好きです。理由は、人間とコンピューターが同じ構造・同じ結果を共有できる言語だからです。<br />
+                デザインで考えた構造が、そのまま実装に反映され、誰が見ても同じUIとして表現されるところに魅力を感じています。
+              </p>
+            </div>
+          </li>
+
+          <li class="section-wish--list">
+            <div class="section__thinking--h3">
+              <h3>得意領域を活かして仕事をしたい</h3>
+              <p>
+                以下の図は、UIデザインにおけるデザインの五段階モデルと呼ばれるものです。<br />
+                こちらを用いて私の得意領域の可視化を行っています。
+              </p>
+            </div>
+            <div class="">
+              <figure class="section-wish--figcaption">
+                <img
+                  src="./img/specialty.png"
+                  class="section-wish--img"
+                  alt="UIデザインプロセスの5段階図（表層・骨格・構造・要件・戦略）。そのうち中流工程にあたる「骨格」「構造」「要件」に★マークが付いており、これらが得意領域であることを示している。"
+                  width="400"
+                  height="300"
+                />
+                <figcaption class="">
+                  図：得意なデザイン領域（UIの5段階モデルに基づく）。<br />
+                  特に<strong>「骨格（設計図・ワイヤーフレーム）」、「構造（情報設計）」、「要件（要件定義）」</strong>の工程に強みを持っています。
+                </figcaption>
+              </figure>
+            </div>
+          </li>
+          <li class="section-wish--list">
+            <div class="section__thinking--h3">
+              <h3>「地味な整備屋」をやりたい</h3>
+              <p>
+                私は環境調整や、仕組み、動線そのものを整え、「誰がやっても同じ結果になる」「タスクに取り組みやすい」環境にすることが好きです。<br />
+                実務で言うと、Figmaを活用したコンポーネント設計、運用ルール策定、デザインと実装の橋渡しが得意です。<br />
+                チーム全体の生産性と一貫性を高めたいです。
+              </p>
+            </div>
+          </li>
+          <li class="section-wish--list">
+            <div class="section__thinking--h3">
+              <h3>アクセシビリティを担保したい</h3>
+              <p>
+                Webやアプリケーションに関わる人間としての責務だと思っています。<br />
+                特に、Webサイトは不特定多数の人々が触れる媒体です。<br />
+                できる限りユーザーの操作負荷を下げることを目標にしたいです。
+              </p>
+            </div>
+          </li>
+          <li class="section-wish--list">
+            <h3>まとめ</h3>
+            <p>
+              マークアップとスタイリングへの偏愛と、元々持っているUIデザインとUXの知見
+              + アクセシビリティを、<br />
+              よりユーザーが多いWebサイト領域で活かしたいです。
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="work" class="section section-works">
         <h2 class="section-title full-bleed">やってきたこと</h2>
         <ul class="section-works__list">
           <li>
@@ -243,7 +309,7 @@
         </ul>
       </section>
 
-      <section class="section section-backcolor">
+      <section class="section">
         <h2 class="section-title full-bleed">デザイン設計思考</h2>
         <div class="section__thinking">
           <div class="section__thinking--content">
