やってきたことセクションの写真レイアウト #7

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./img/bicycle1.jpg"
+                  src="./img/app_mockup.png"
                   class="section-works__thumb"
                   alt="自転車の写真"
                   width="400"
@@ -164,7 +164,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./img/bicycle1.jpg"
+                  src="./img/fish_app_img.png"
                   class="section-works__thumb"
                   alt="自転車の写真"
                   width="400"
@@ -175,7 +175,7 @@
                 釣り人が集まり、釣果を投稿することに特化したSNSアプリデザインと実装
               </h3>
               <p>
-                リニューアルするにあたって、主に投稿画面の導線設計・デザインを担当
+                リニューアルするにあたって、主に投稿画面の導線設計・デザイン・実装を担当
               </p>
             </div>
           </li>
@@ -183,7 +183,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./img/bicycle1.jpg"
+                  src="./img/bank_app_img.png"
                   class="section-works__thumb"
                   alt="自転車の写真"
                   width="400"
@@ -193,9 +193,7 @@
               <h3 class="section-works__title">
                 銀行口座の不正な取引を自動で判断し、不正取引検知するシステムのUIデザイン
               </h3>
-              <p>
-                `table`のセマンティクスを活かし、ソート・ページネーションにキーボード操作とスクリーンリーダー配慮を実装。
-              </p>
+              <p>要件定義から関わる。全ページのUIを担当。</p>
             </div>
           </li>
         </ul>
