--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <section class="section">
         <h2 class="section-title full-bleed">今後やりたいこと</h2>
         <ul class="section-wish">
-          <li class="section-wish--list">
-            <div class="section__thinking--h3">
+          <li class="section-wish__list">
+            <div class="">
               <h3>htmlマークアップとCSSスタイリング</h3>
               <p>
                 私は全工程の中で、htmlとCSSが一番好きです。理由は、人間とコンピューターが同じ構造・同じ結果を共有できる言語だからです。<br />
@@ -85,8 +85,8 @@
             </div>
           </li>
 
-          <li class="section-wish--list">
-            <div class="section__thinking--h3">
+          <li class="section-wish__list">
+            <div class="">
               <h3>得意領域を活かして仕事をしたい</h3>
               <p>
                 以下の図は、UIデザインにおけるデザインの五段階モデルと呼ばれるものです。<br />
@@ -109,8 +109,8 @@
               </figure>
             </div>
           </li>
-          <li class="section-wish--list">
-            <div class="section__thinking--h3">
+          <li class="section-wish__list">
+            <div class="">
               <h3>「地味な整備屋」をやりたい</h3>
               <p>
                 私は環境調整や、仕組み、動線そのものを整え、「誰がやっても同じ結果になる」「タスクに取り組みやすい」環境にすることが好きです。<br />
@@ -119,8 +119,8 @@
               </p>
             </div>
           </li>
-          <li class="section-wish--list">
-            <div class="section__thinking--h3">
+          <li class="section-wish__list">
+            <div class="">
               <h3>アクセシビリティを担保したい</h3>
               <p>
                 Webやアプリケーションに関わる人間としての責務だと思っています。<br />
@@ -129,13 +129,15 @@
               </p>
             </div>
           </li>
-          <li class="section-wish--list">
-            <h3>まとめ</h3>
-            <p>
-              マークアップとスタイリングへの偏愛と、元々持っているUIデザインとUXの知見
-              + アクセシビリティを、<br />
-              よりユーザーが多いWebサイト領域で活かしたいです。
-            </p>
+          <li class="section-wish__list">
+            <div>
+              <h3>まとめ</h3>
+              <p>
+                マークアップとスタイリングへの偏愛と、元々持っているUIデザインとUXの知見
+                + アクセシビリティを、<br />
+                よりユーザーが多いWebサイト領域で活かしたいです。
+              </p>
+            </div>
           </li>
         </ul>
       </section>
@@ -149,7 +151,7 @@
                 <img
                   src="./img/app_mockup.png"
                   class="section-works__thumb"
-                  alt="自転車の写真"
+                  alt="過去の自分やお手本と見比べ、技術向上を目指すアプリのUIデザインにぼかしを入れた写真"
                   width="400"
                   height="300"
                 />
@@ -166,7 +168,7 @@
                 <img
                   src="./img/fish_app_img.png"
                   class="section-works__thumb"
-                  alt="自転車の写真"
+                  alt="釣り人が釣果を投稿することに特化したSNSアプリのUIデザインにぼかしを入れた写真"
                   width="400"
                   height="300"
                 />
@@ -185,13 +187,13 @@
                 <img
                   src="./img/bank_app_img.png"
                   class="section-works__thumb"
-                  alt="自転車の写真"
+                  alt="銀行口座の不正な取引を自動で判断し、不正取引を検知するシステムのUIデザインにぼかしを入れた画像"
                   width="400"
                   height="300"
                 />
               </div>
               <h3 class="section-works__title">
-                銀行口座の不正な取引を自動で判断し、不正取引検知するシステムのUIデザイン
+                銀行口座の不正な取引を自動で判断し、不正取引を検知するシステムのUIデザイン
               </h3>
               <p>要件定義から関わる。全ページのUIを担当。</p>
             </div>
@@ -204,103 +206,73 @@
         <ul class="section-skills__list">
           <li>
             <div class="section-skills__card">
-              <div>
-                <img
-                  src="./img/bicycle1.jpg"
-                  alt="自転車の写真"
-                  width="400"
-                  height="300"
-                />
-              </div>
               <h3 class="">マークアップ・スタイリング</h3>
               <p>
-                生htmlからReactなどフレームワークのマークアップを行います。<br />
-                CSSスタイリングにおいても同じく、生CSSからフレームワークまで行います。
+                HTML / CSSによるマークアップおよびスタイリングを行います。<br />
+                静的なHTML /
+                CSSによる実装から、Reactなどのフレームワーク環境におけるマークアップまで対応可能です。
+                CSSについても、素のCSSを用いた設計から、フレームワークやライブラリを活用したスタイリングまで、
+                実装環境に応じて適切な手法を選択しています。
               </p>
             </div>
           </li>
           <li>
             <div class="section-skills__card">
-              <div>
-                <img
-                  src="./img/bicycle1.jpg"
-                  alt="自転車の写真"
-                  width="400"
-                  height="300"
-                />
-              </div>
               <h3 class="">UI・Webデザイン</h3>
               <p>
-                アプリのUIやWebページのデザインからマークアップ・スタイリングまで。<br />
-                デザインは実装を前提にfigmaで作成します。
+                アプリのUI設計やWebページのデザインから、
+                マークアップ・スタイリングまで一貫して対応しています。<br />
+                Figmaでは、実装時の構造やコンポーネント分割を意識しながらデザインを行い、
+                デザインと実装の間にズレが生まれない設計を重視しています。
               </p>
             </div>
           </li>
           <li>
             <div class="section-skills__card">
-              <div class="">
-                <img
-                  src="./img/bicycle1.jpg"
-                  alt="自転車の写真"
-                  width="400"
-                  height="300"
-                />
-              </div>
               <h3 class="">要件定義からの伴走</h3>
               <p>
-                要件定義のクライアント要求フェーズから検討の段階で、機能設計・画面設計、プロトタイプを作成します。
+                要件定義の段階からプロジェクトに関わり、
+                クライアントの要望や前提条件を整理しながら、
+                機能設計・画面設計、プロトタイプの作成を行います。<br />
+                言葉だけでは共有しづらい内容を、
+                画面や構造として可視化することで、
+                認識のズレを防ぎ、開発を進めやすい状態をつくることを大切にしています。
               </p>
             </div>
           </li>
           <li>
             <div class="section-skills__card">
-              <div class="">
-                <img
-                  src="./img/bicycle1.jpg"
-                  alt="自転車の写真"
-                  width="400"
-                  height="300"
-                />
-              </div>
               <h3 class="">情報設計</h3>
               <p>
-                可能な限りユーザーにとって操作・情報負荷を下げる設計を心がけています。<br />設計にあたっては主にFigJamを使うことが多いです。
+                情報設計では、ユーザーが「考えなくても使える」状態を目指しています。<br />
+                操作や情報の負荷を下げるため、
+                情報の整理・優先順位付け・構造化を行い、
+                FigJamを用いて、関係者間で共通認識を持てる形に可視化します。
               </p>
             </div>
           </li>
 
           <li>
             <div class="section-skills__card">
-              <div class="t">
-                <img
-                  src="./img/bicycle1.jpg"
-                  alt="自転車の写真"
-                  width="400"
-                  height="300"
-                />
-              </div>
               <h3 class="">UXリサーチ</h3>
-              <p>リサーチからの課題設計を行い、<br />UX設計につなげます。</p>
+              <p>
+                UXリサーチを通じてユーザーの状況や行動を把握し、
+                課題として整理した上でUX設計へと反映しています。<br />
+                リサーチ結果を目的なく並べるのではなく、
+                「何を設計で解決すべきか」を明確にするためのプロセスとして、リサーチを位置づけています。
+              </p>
             </div>
           </li>
 
           <li>
             <div class="section-skills__card">
-              <div class="">
-                <img
-                  src="./img/bicycle1.jpg"
-                  alt="自転車の写真"
-                  width="400"
-                  height="300"
-                />
-              </div>
-
-              <h3 class="">
-                JavaScriptを用いた動きの実装<br />（ちょこっとだけ）
-              </h3>
+              <h3 class="">デザイン×実装の橋渡し</h3>
               <p>
-                時々前職の業務でやらざるを得ない時にめちゃめちゃ調べながらがんばりました。
-                <br />もう一度勉強しながらやってみたいなと思っております。
+                JavaScriptを用いた基本的なUIインタラクションの実装や、
+                UIライブラリ（MUIなど）のカスタマイズ経験があります。<br />
+                フロントエンドエンジニアの専門領域を担うことはありませんが、
+                実装の仕組みを理解した上で、
+                デザインと実装の橋渡しを行うことを強みとしています。
               </p>
             </div>
           </li>
@@ -311,25 +283,37 @@
         <h2 class="section-title full-bleed">デザイン設計思考</h2>
         <div class="section__thinking">
           <div class="section__thinking--content">
-            <h3 class="section__thinking--h3">思考の概要</h3>
+            <h3 class="section__tittle">思考の概要</h3>
             <ul class="section__thinking--list">
               <li>
                 <div class="section__thinking--card">
                   <h4>デザインは構造を可視化するもの</h4>
                   <div>
                     <p>
-                      Figmaで作るときは実際のHTML構造を想定してAuto
-                      Layoutを設定。
+                      私にとってデザインとは、 見た目を作ることではなく、
+                      構造を誰にでも分かる形にすることです。<br />
+                      Figmaでは、実際のHTML構造を想定してAuto Layoutを組み、
+                      余白やネスト、命名を整理することで、<br />デザインと実装の間にズレが生まれない設計を心がけています。<br />
+                      <br />
+                      こうした設計によって、人とコンピューターが同じ構造を共有できるUIを目指しています。
                     </p>
-                    <p>余白・ネスト・命名など、後の実装を見越して整理。</p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="section__thinking--card">
                   <h4>再利用・修正・メンテナンスを前提に</h4>
-                  <p>ReactやCSS Modulesで扱いやすい粒度でコンポーネント化。</p>
-                  <p>Variant名・クラス名・変数名は統一しておく。</p>
+                  <p>
+                    UIやWebサイトは作って終わりではなく、
+                    再利用・修正・メンテナンスされ続けるものだと考えています。
+                    <br />
+                    ReactやCSS Modulesなどの実装環境を想定し、
+                    扱いやすい粒度でコンポーネントを設計・分割しています。
+                    <br />
+                    Variant名・クラス名・変数名はあらかじめ統一し、
+                    誰が触っても同じ理解で扱える状態をつくることで、 <br />
+                    将来的な変更や拡張にも対応しやすいUIを目指しています。
+                  </p>
                 </div>
               </li>
               <li>
@@ -351,9 +335,7 @@
               </li>
             </ul>
             <div class="section__thinking--case-wrapper">
-              <h3 class="section__thinking--h3">
-                figmaでのデザインとコード対応
-              </h3>
+              <h3 class="section__tittle">figmaでのデザインとコード対応</h3>
               <div class="section__thinking--case-content">
                 <div class="section__thinking--case-title">
                   <h4>Case1 ボタン</h4>
