--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
         <div class="site-header--logo">
           <a href="/" class="site-header--logo-bland">Kanako Koyanagi</a>
         </div>
-        <!-- <nav>
-          <ul class="menu">
-            <li class="menu-list"><a href="#" class="menu-link">About</a></li>
-            <li class="menu-list"><a href="#" class="menu-link">Bicycle</a></li>
-            <li class="menu-list"><a href="#" class="menu-link">Bicycle</a></li>
-            <li class="menu-list"><a href="#" class="menu-link">Bicycle</a></li>
-          </ul>
-        </nav> -->
       </div>
     </header>
 
@@ -34,38 +26,35 @@
       <div class="hero full-bleed">
         <div class="hero-copy">
           <h1 class="hero-copy__letter">
-            仕組みを整え、<br />最適な動線づくりを。
+            デザインの意図を、<br />実装につなぐ<br />マークアップを目指します。
           </h1>
         </div>
-        <img
-          src="./img/IMG_9260.JPG"
-          class="hero-mainvisual"
-          alt=""
-          width="3"
-          height="2"
-        />
       </div>
 
       <section id="about" class="section">
         <div class="section-about">
           <h2 class="section-title full-bleed">略歴</h2>
-          <div class="section-about--flex">
+          <div class="section-about--content">
             <img
-              src="./img/about.jpg"
+              src="./img/profile.png"
               class="section-about--img"
               alt="小柳 佳那子のプロフィール写真"
               width="100"
               height="100"
             />
-            <div class="section-about__description">
-              <p class="section-about__description--name-jp">小柳 佳那子</p>
-              <p class="section-about__description--name-en">Kanako Koyanagi</p>
+            <p class="section-about__description--name-jp">小柳 佳那子</p>
+            <p class="section-about__description--name-en">Kanako Koyanagi</p>
+
+            <div class="section-about__description section-about__bio">
               <p class="section-about__description--detail">
-                10年ほど公立や私立の小中高で美術を教える。<br />
-                その際に、特別支援教育、ICTと出会い、アクセシビリティと結びつく。<br />
-                情報を「伝わる形」に整理するのが好きです。<br />
-                得意領域：toB業務UI、デザインシステム整備、htmlマークアップ、CSSスタイリング、文章<br />
-                目標：読みやすさ・保守性・一貫性・ユーザの操作負荷を下げる設計<br />
+                約10年間、公立・私立の小中高で美術教育に携わってきました。<br />
+                特別支援教育やICT教育に関わる中で、<br />
+                情報の伝え方やアクセシビリティへの関心が高まりました。<br />
+                現在は、デザインと実装のあいだにある情報を整理し、<br />
+                HTML / CSSを用いて構造として正確に表現すること目指しています。<br />
+                toB向け業務UIやデザインシステムの整備、<br />
+                マークアップ・スタイリング、文章による情報整理を通じて、<br />
+                読みやすく、保守しやすく、一貫性のあるUI設計を目指しています。
               </p>
             </div>
           </div>
@@ -133,7 +122,7 @@
             <div>
               <h3>まとめ</h3>
               <p>
-                マークアップとスタイリングへの偏愛と、元々持っているUIデザインとUXの知見
+                マークアップとスタイリング + 元々持っているUIデザインとUXの知見
                 + アクセシビリティを、<br />
                 よりユーザーが多いWebサイト領域で活かしたいです。
               </p>
