命名規則崩れや、間違えているCSSを直す #10

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="container">
-    <a class="skip-link" href="#main">本文へスキップ</a>
-    <header class="site-header full-bleed">
-      <div class="site-header--inner">
-        <div class="site-header--logo">
-          <a href="/" class="site-header--logo-bland">Kanako Koyanagi</a>
+  <body class="l-container">
+    <a class="u-skip-link" href="#main">本文へスキップ</a>
+    <header class="site-header u-full-bleed">
+      <div class="">
+        <div class="site-header__logo">
+          <a href="/" class="site-header__brand">Kanako Koyanagi</a>
         </div>
       </div>
     </header>
 
     <main id="main">
-      <div class="hero full-bleed">
+      <div class="hero u-full-bleed">
         <div class="hero-copy">
           <h1 class="hero-copy__letter">
             デザインの意図を、<br />実装につなぐ<br />マークアップを目指します。
@@ -31,27 +31,28 @@
         </div>
       </div>
 
-      <section id="about" class="section">
-        <div class="section-about">
-          <h2 class="section-title full-bleed">略歴</h2>
-          <div class="section-about--content">
+      <l-section id="about" class="l-section">
+        <div class="l-section-about">
+          <h2 class="l-section-title u-full-bleed">略歴</h2>
+          <div class="l-section-about__content">
             <img
               src="./img/profile.png"
-              class="section-about--img"
+              class="l-section-about__img"
               alt="小柳 佳那子のプロフィール写真"
               width="100"
               height="100"
             />
-            <p class="section-about__description--name-jp">小柳 佳那子</p>
-            <p class="section-about__description--name-en">Kanako Koyanagi</p>
+            <p class="l-section-about__name-jp">小柳 佳那子</p>
+            <p class="l-section-about__name-en">Kanako Koyanagi</p>
 
-            <div class="section-about__description section-about__bio">
-              <p class="section-about__description--detail">
+            <div class="l-section-about__description l-section-about__bio">
+              <p class="l-section-about__detail">
                 約10年間、公立・私立の小中高で美術教育に携わってきました。<br />
                 特別支援教育やICT教育に関わる中で、<br />
                 情報の伝え方やアクセシビリティへの関心が高まりました。<br />
                 現在は、デザインと実装のあいだにある情報を整理し、<br />
-                HTML / CSSを用いて構造として正確に表現すること目指しています。<br />
+                HTML /
+                CSSを用いて構造として正確に表現すること目指しています。<br />
                 toB向け業務UIやデザインシステムの整備、<br />
                 マークアップ・スタイリング、文章による情報整理を通じて、<br />
                 読みやすく、保守しやすく、一貫性のあるUI設計を目指しています。
@@ -59,12 +60,12 @@
             </div>
           </div>
         </div>
-      </section>
+      </l-section>
 
-      <section class="section">
-        <h2 class="section-title full-bleed">今後やりたいこと</h2>
-        <ul class="section-wish">
-          <li class="section-wish__list">
+      <l-section class="l-section">
+        <h2 class="l-section-title u-full-bleed">今後やりたいこと</h2>
+        <ul class="l-section-wish">
+          <li class="l-section-wish__list">
             <div class="">
               <h3>htmlマークアップとCSSスタイリング</h3>
               <p>
@@ -74,7 +75,7 @@
             </div>
           </li>
 
-          <li class="section-wish__list">
+          <li class="l-section-wish__list">
             <div class="">
               <h3>得意領域を活かして仕事をしたい</h3>
               <p>
@@ -83,10 +84,10 @@
               </p>
             </div>
             <div class="">
-              <figure class="section-wish--figcaption">
+              <figure class="l-section-wish--figcaption">
                 <img
                   src="./img/specialty.png"
-                  class="section-wish--img"
+                  class="l-section-wish--img"
                   alt="UIデザインプロセスの5段階図（表層・骨格・構造・要件・戦略）。そのうち中流工程にあたる「骨格」「構造」「要件」に★マークが付いており、これらが得意領域であることを示している。"
                   width="400"
                   height="300"
@@ -98,7 +99,7 @@
               </figure>
             </div>
           </li>
-          <li class="section-wish__list">
+          <li class="l-section-wish__list">
             <div class="">
               <h3>「地味な整備屋」をやりたい</h3>
               <p>
@@ -108,7 +109,7 @@
               </p>
             </div>
           </li>
-          <li class="section-wish__list">
+          <li class="l-section-wish__list">
             <div class="">
               <h3>アクセシビリティを担保したい</h3>
               <p>
@@ -118,7 +119,7 @@
               </p>
             </div>
           </li>
-          <li class="section-wish__list">
+          <li class="l-section-wish__list">
             <div>
               <h3>まとめ</h3>
               <p>
@@ -129,40 +130,40 @@
             </div>
           </li>
         </ul>
-      </section>
+      </l-section>
 
-      <section id="work" class="section section-works">
-        <h2 class="section-title full-bleed">やってきたこと</h2>
-        <ul class="section-works__list">
+      <l-section id="work" class="l-section l-section-works">
+        <h2 class="l-section-title u-full-bleed">やってきたこと</h2>
+        <ul class="l-section-works__list">
           <li>
-            <div class="section-works__card">
+            <div class="l-section-works__card">
               <div class="">
                 <img
                   src="./img/app_mockup.png"
-                  class="section-works__thumb"
+                  class="l-section-works__thumb"
                   alt="過去の自分やお手本と見比べ、技術向上を目指すアプリのUIデザインにぼかしを入れた写真"
                   width="400"
                   height="300"
                 />
               </div>
-              <h3 class="section-works__title">
+              <h3 class="l-section-works__title">
                 過去の自分やお手本と見比べ、技術向上を目指すアプリのUIデザイン
               </h3>
               <p>導線設計から全ページのUIデザインを担当</p>
             </div>
           </li>
           <li>
-            <div class="section-works__card">
+            <div class="l-section-works__card">
               <div class="">
                 <img
                   src="./img/fish_app_img.png"
-                  class="section-works__thumb"
+                  class="l-section-works__thumb"
                   alt="釣り人が釣果を投稿することに特化したSNSアプリのUIデザインにぼかしを入れた写真"
                   width="400"
                   height="300"
                 />
               </div>
-              <h3 class="section-works__title">
+              <h3 class="l-section-works__title">
                 釣り人が集まり、釣果を投稿することに特化したSNSアプリデザインと実装
               </h3>
               <p>
@@ -171,30 +172,30 @@
             </div>
           </li>
           <li>
-            <div class="section-works__card">
+            <div class="l-section-works__card">
               <div class="">
                 <img
                   src="./img/bank_app_img.png"
-                  class="section-works__thumb"
+                  class="l-section-works__thumb"
                   alt="銀行口座の不正な取引を自動で判断し、不正取引を検知するシステムのUIデザインにぼかしを入れた画像"
                   width="400"
                   height="300"
                 />
               </div>
-              <h3 class="section-works__title">
+              <h3 class="l-section-works__title">
                 銀行口座の不正な取引を自動で判断し、不正取引を検知するシステムのUIデザイン
               </h3>
               <p>要件定義から関わる。全ページのUIを担当。</p>
             </div>
           </li>
         </ul>
-      </section>
+      </l-section>
 
-      <section class="section" id="skills">
-        <h2 class="section-title full-bleed">できること</h2>
-        <ul class="section-skills__list">
+      <l-section class="l-section" id="skills">
+        <h2 class="l-section-title u-full-bleed">できること</h2>
+        <ul class="l-section-skills__list">
           <li>
-            <div class="section-skills__card">
+            <div class="l-section-skills__card">
               <h3 class="">マークアップ・スタイリング</h3>
               <p>
                 HTML / CSSによるマークアップおよびスタイリングを行います。<br />
@@ -206,7 +207,7 @@
             </div>
           </li>
           <li>
-            <div class="section-skills__card">
+            <div class="l-section-skills__card">
               <h3 class="">UI・Webデザイン</h3>
               <p>
                 アプリのUI設計やWebページのデザインから、
@@ -217,7 +218,7 @@
             </div>
           </li>
           <li>
-            <div class="section-skills__card">
+            <div class="l-section-skills__card">
               <h3 class="">要件定義からの伴走</h3>
               <p>
                 要件定義の段階からプロジェクトに関わり、
@@ -230,7 +231,7 @@
             </div>
           </li>
           <li>
-            <div class="section-skills__card">
+            <div class="l-section-skills__card">
               <h3 class="">情報設計</h3>
               <p>
                 情報設計では、ユーザーが「考えなくても使える」状態を目指しています。<br />
@@ -242,7 +243,7 @@
           </li>
 
           <li>
-            <div class="section-skills__card">
+            <div class="l-section-skills__card">
               <h3 class="">UXリサーチ</h3>
               <p>
                 UXリサーチを通じてユーザーの状況や行動を把握し、
@@ -254,7 +255,7 @@
           </li>
 
           <li>
-            <div class="section-skills__card">
+            <div class="l-section-skills__card">
               <h3 class="">デザイン×実装の橋渡し</h3>
               <p>
                 JavaScriptを用いた基本的なUIインタラクションの実装や、
@@ -266,16 +267,16 @@
             </div>
           </li>
         </ul>
-      </section>
+      </l-section>
 
-      <section class="section">
-        <h2 class="section-title full-bleed">デザイン設計思考</h2>
-        <div class="section__thinking">
-          <div class="section__thinking--content">
-            <h3 class="section__tittle">思考の概要</h3>
-            <ul class="section__thinking--list">
+      <l-section class="l-section">
+        <h2 class="l-section-title u-full-bleed">デザイン設計思考</h2>
+        <div class="l-section__thinking">
+          <div class="l-section-thinking__content">
+            <h3 class="l-section__title">思考の概要</h3>
+            <ul class="l-section-thinking__list">
               <li>
-                <div class="section__thinking--card">
+                <div class="l-section-thinking__card">
                   <h4>デザインは構造を可視化するもの</h4>
                   <div>
                     <p>
@@ -283,14 +284,13 @@
                       構造を誰にでも分かる形にすることです。<br />
                       Figmaでは、実際のHTML構造を想定してAuto Layoutを組み、
                       余白やネスト、命名を整理することで、<br />デザインと実装の間にズレが生まれない設計を心がけています。<br />
-                      <br />
                       こうした設計によって、人とコンピューターが同じ構造を共有できるUIを目指しています。
                     </p>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="section__thinking--card">
+                <div class="l-section-thinking__card">
                   <h4>再利用・修正・メンテナンスを前提に</h4>
                   <p>
                     UIやWebサイトは作って終わりではなく、
@@ -306,7 +306,7 @@
                 </div>
               </li>
               <li>
-                <div class="section__thinking--card">
+                <div class="l-section-thinking__card">
                   <h4>実装を前提にしたデザインを行う</h4>
                   <p>
                     一貫性を保つデザインシステム整備を通じて、<br />
@@ -315,7 +315,7 @@
                 </div>
               </li>
               <li>
-                <div class="section__thinking--card">
+                <div class="l-section-thinking__card">
                   <h4>環境整備がチームの効率化の鍵である</h4>
                   <p>
                     小さな整備の積み重ねで、納期と品質を両立することを目標にしています。
@@ -323,18 +323,18 @@
                 </div>
               </li>
             </ul>
-            <div class="section__thinking--case-wrapper">
-              <h3 class="section__tittle">figmaでのデザインとコード対応</h3>
-              <div class="section__thinking--case-content">
-                <div class="section__thinking--case-title">
+            <div class="l-section-thinking__case-wrapper">
+              <h3 class="l-section__title">figmaでのデザインとコード対応</h3>
+              <div class="l-section-thinking__case-content">
+                <div class="l-section-thinking__case-title">
                   <h4>Case1 ボタン</h4>
                   <p>命名の一貫性</p>
                 </div>
-                <p class="section__thinking--case-letter">
+                <p class="l-section-thinking__case-letter">
                   初歩的なことではありますが、状態による変化の管理やコンポート名の命名に一貫性を持たせることを気をつけています。
                 </p>
-                <ul class="section__thinking--case-list">
-                  <li class="section__thinking--case-list-inner">
+                <ul class="l-section-thinking__case-list">
+                  <li class="l-section-thinking__case-list-inner">
                     <h5>Figmaでのデザイン</h5>
                     <div class="">
                       <figure>
@@ -343,10 +343,10 @@
                           alt="Figma画面の左にあるサイドパネルと、デザイン作業パネル。作成したボタンコンポーネントの状態一覧をスクリーンショットした画像。左側にレイヤー名が上から一覧で並んでいる。上から親要素VariantsのButtonの中に、inactive-disabled、inactive-hover、active-disabled、active-hover、active-focused、active、inactive-focused、inactiveのレイヤー名が並んでいる。縦に Normal と Active、横に Default・Hover・Focus・Disabled が並び、デザイン作成のワークスペースには、青い「押さないでね」ボタンと赤い「押しちゃったんですか？」ボタンが、それぞれ通常・ホバー・フォーカス・無効の色や枠線の違いで表示されている。"
                           width="400"
                           height="300"
-                          class="section__thinking--images"
+                          class="l-section-thinking__images"
                         />
                         <figcaption
-                          class="section__thinking--images-figcaption"
+                          class="l-section-thinking__images-figcaption"
                         >
                           図 : ボタンコンポーネントのバリアント表。State
                           (Default, Hover, Focus, Disabled) と Type (Normal,
@@ -355,7 +355,7 @@
                       </figure>
                     </div>
                   </li>
-                  <li class="section__thinking--case-list-inner">
+                  <li class="l-section-thinking__case-list-inner">
                     <h5>html/CSS/JS例</h5>
                     <p
                       class="codepen"
@@ -390,7 +390,7 @@
                       src="https://public.codepenassets.com/embed/index.js"
                     ></script>
                   </li>
-                  <li class="section__thinking--case-list-inner">
+                  <li class="l-section-thinking__case-list-inner">
                     <h5>React例</h5>
                     <p>
                       注：こちらのコードはあくまでデザインや、その命名をもとにAIで生成したReactのコードになります。本人はバリバリReact書けます！とかではないです。
@@ -432,17 +432,17 @@
                 </ul>
               </div>
             </div>
-            <div class="section__thinking--case-content">
-              <div class="section__thinking--case-title">
+            <div class="l-section-thinking__case-content">
+              <div class="l-section-thinking__case-title">
                 <h4>Case2 カード</h4>
                 <p>構造の整合性</p>
               </div>
-              <p class="section__thinking--case-letter">
+              <p class="l-section-thinking__case-letter">
                 HTML構造を考慮して、Figmaではレイヤー構造,レイヤー名（class名との一致）を決め、Auto
                 Layoutを使用します。
               </p>
-              <ul class="section__thinking--case-list">
-                <li class="section__thinking--case-list-inner">
+              <ul class="l-section-thinking__case-list">
+                <li class="l-section-thinking__case-list-inner">
                   <h5>Figmaでのデザイン</h5>
                   <div class="">
                     <figure>
@@ -451,16 +451,16 @@
                         alt="Figma画面の左にあるサイドパネルとデザイン作業パネルで作成したカードコンポーネントの状態をスクリーンショットした画像。記事カードのUIデザイン案。サムネイル画像、日付、タグ、タイトル、リンクボタンで構成されており、デフォルト状態とホバー状態のスタイル比較が表示されている。左側にはレイヤー名が並んでおり、上から順に親要素のcardの中に、画像用のcard__thumbnail、本文用のcard__body、ボタン用のcard__buttonが含まれている。"
                         width="400"
                         height="300"
-                        class="section__thinking--images"
+                        class="l-section-thinking__images"
                       />
-                      <figcaption class="section__thinking--images-figcaption">
+                      <figcaption class="l-section-thinking__images-figcaption">
                         図 : カードコンポーネントのレイヤー構造一覧（Block:
                         card, Element: card__thumbnailなど）
                       </figcaption>
                     </figure>
                   </div>
                 </li>
-                <li class="section__thinking--case-list-inner">
+                <li class="l-section-thinking__case-list-inner">
                   <h5>html/CSS/JS例</h5>
                   <p
                     class="codepen"
@@ -498,17 +498,17 @@
                 </li>
               </ul>
             </div>
-            <div class="section__thinking--case-content">
-              <div class="section__thinking--case-title">
+            <div class="l-section-thinking__case-content">
+              <div class="l-section-thinking__case-title">
                 <h4>Case3 フォーム</h4>
                 <p>状態管理と再利用性</p>
               </div>
-              <p class="section__thinking--case-letter">
+              <p class="l-section-thinking__case-letter">
                 状態（default / focus / filled / error / disabled）を Variant
                 として設計し、実装する際の状態管理と対応づけます。
               </p>
-              <ul class="section__thinking--case-list">
-                <li class="section__thinking--case-list-inner">
+              <ul class="l-section-thinking__case-list">
+                <li class="l-section-thinking__case-list-inner">
                   <h5>Figmaでのデザイン</h5>
                   <div class="">
                     <figure>
@@ -517,16 +517,16 @@
                         alt="Figmaで作成したログインフォームの5つの状態（デフォルト、フォーカス、入力済み、エラー、無効）のデザイン案。メールアドレスとパスワードの入力欄、ログインボタンの変化を示している。。"
                         width="400"
                         height="300"
-                        class="section__thinking--images"
+                        class="l-section-thinking__images"
                       />
-                      <figcaption class="section__thinking--images-figcaption">
+                      <figcaption class="l-section-thinking__images-figcaption">
                         図 :
                         ログインフォームにおける各インタラクション状態（未入力・入力中・エラー発生時等）のデザインパターン
                       </figcaption>
                     </figure>
                   </div>
                 </li>
-                <li class="section__thinking--case-list-inner">
+                <li class="l-section-thinking__case-list-inner">
                   <h5>html/CSS/JS例</h5>
                   <p
                     class="codepen"
@@ -566,7 +566,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </l-section>
     </main>
 
     <footer class="site-footer">
